add:更改为左侧布局

--- a/source/_posts/基础知识-终端工具.md
+++ b/source/_posts/基础知识-终端工具.md
@@ -75,7 +75,7 @@ set show-all-if-ambiguous on
 TAB: menu-complete
 ```
 
-完成后按 {%label @⌃Control ＋ o %} 键保存关闭、重启。
+完成后按 {%label @⌃Control ＋ o %} 键保存关闭、重启Terminal。
 
 ## 安装oh-my-zsh
 
